# iparams_regression

./: CMakeLists.txt  package.xml  setup.py
data/: transforms.json
launch/: estimation.launch  regressor.launch
scripts/: estimator_node.py  regressor_node.py  test_estimators.py
src/iparams_regression/: __init__.py  dynamics_utils.py  inertial_estimator.py  inertial_parameters.py  numerical_differentiator.py  recursive_ols.py  recursive_tls.py  regressor_matrix.py
tmp/: __init__.py  dynamics.py  example_simulation.py  example_with_real_data.py  realtime_display.py  recursive_tls.py
